# bankid_asyncio

./: .coverage  .flake8  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  python-package.yml
bankid_asyncio/: __init__.py  enums.py  exceptions.py  factory.py  helpers.py  interfaces.py  messages.py  schemas.py
bankid_asyncio/clients/: __init__.py  asynchronous.py  asynchronous_with_pydantic.py  bases.py  synchronous.py  synchronous_with_pydantic.py
common/abbreviations/: index.html
docs/: index.md  setup.md  usage.md
docs/common/: abbreviations.md
docs/includes/: .env  async_2.py  badges.md  sync_without_pydantic_1.py
en/: index.html
en/common/abbreviations/: index.html
en/diagrams/src/: howto.puml
en/includes/: factory_1.py
en/includes/badges/: index.html
en/setup/: index.html
en/usage/: index.html
includes/: async_1.py  sync_1.py
includes/badges/: index.html
search/: search_index.json
setup/: index.html
tests/: conftest.py  test_exceptions.py  test_factory.py  test_helpers.py  test_schemas.py
tests/test_clients/: test_asynchronous.py  test_asynchronous_with_pydantic.py  test_bases.py  test_synchronous.py  test_synchronous_with_pydantic.py
uk/: index.html
uk/common/abbreviations/: index.html
uk/includes/: async_without_pydantic_1.py  settings_1.py
uk/includes/badges/: index.html
uk/setup/: index.html
uk/usage/: index.html
usage/: index.html
